# BSUSat2_simulator

./: .gitignore  CMakeLists.txt  CUBIM-1_MB_Telemetry_Struct.txt  CmakeLists.txt  bdevice.py  eeprom_i2c.py  ina219.c  ina219.h  main.c  main.cpp  openocd_pico.cfg  pico-debug.cfg
CANTRANSMIT/: CMakeLists.txt  can.cpp  canTransmit.cpp
CANTRANSMIT/include/: can.h
CAN_driver/: CmakeLists.txt
CAN_driver/MCP2515/: mcp2515.c  mcp2515.cpp
CAN_driver/MCP2515/include/: mcp2515.h
CAN_driver/PCA9554/include/: PCA9554.h
GPS/: GPS_module.py
INA219/: CmakeLists.txt  INA219.cpp
INA219/include/: ina219.h
INA219/source/: ina219.c
INA3221/: CmakeLists.txt  INA3221.cpp
INA3221/headers/: ina3221.h
INA3221/include/: ina3221.h
INA3221/source/: ina3221.c
INTERRUPT/: CMakeLists.txt  interrupt.cpp
INTERRUPT/include/: interrupt.h
MCP2515/: CmakeLists.txt  mcp2515.cpp
MCP2515/include/: can.h  mcp2515.h
PCA9554/: CmakeLists.txt  PCA9554.cpp
PCA9554/include/: PCA9554.h  PCA9554_reg.h
Slot_Control/: CMakeLists.txt
Slot_Control/src/: main.cpp
Solar_Sensors/: CMakeLists.txt  Solar_Sensors.ioc
Solar_Sensors/BH1750/: BH1750.md
Solar_Sensors/BH1750/Inc/: BH1750.h  bh1750_stm32_port.h
Solar_Sensors/BH1750/Src/: BH1750.c  bh1750_stm32_port.c
Solar_Sensors/Core/Inc/: stm32f0xx_it.h
Solar_Sensors/Core/Src/: dma.c  gpio.c  i2c.c  main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  tim.c
Solar_Sensors/Leads/Inc/: leads.h
Solar_Sensors/Leads/Src/: leads.c
Solar_Sensors/Leads/config/: WS2812b_config.h
Solar_Sensors/si1143_a11_gmr/Inc/: si1143.h
Solar_Sensors/si1143_a11_gmr/Src/: si1143.c
Solar_Sensors/soft_i2c/: soft_i2c.md
Solar_Sensors/soft_i2c/Inc/: soft_i2c.h  (+1 more)
e10_433/: CMakeLists.txt  debug_main.py  e10_433.cpp  main.py
e10_433(Python)/device_controller/: device_config.py  slot_controller.py
e10_433(Python)/radio_driver/: SI4463.py  __init__.py  crc.py  hdlc_encoder.py  nrzi_encoder.py  radio_config.py  radio_controller.py  radio_message_parser.py
e10_433/AX25/: AX25.cpp  CMakeLists.txt
e10_433/can_driver/: __init__.py
e10_433/can_driver/can/: __init__.py  can.py  can_controller.py  can_message_parser.py  mcp2515.py
e10_433/can_driver/spi/: __init__.py  spi.py  spi_pico.py
e10_433/device_controller/: __init__.py  device_config.py  slot_controller.py
e10_433/driver/: CMakeLists.txt  driver.cpp
e10_433/driver/include/: driver.h  driver_config.h
e10_433/e10_433_CppDdriver/: CmakeLists.txt
e10_433/include/: e10_433.h
e10_433/radio_driver/: AX25header.py  SI4463.py  crc.py  encoder.py  g3ruh_scrambler.py  hdlc_encoder.py  nrzi_encoder.py  radio_config.py  radio_message_parser.py
e10_433/tests/: test_can_receive.py  test_can_send.py  test_encode_decode.py  test_file_transfer.py  test_radio_receive.py  test_radio_send.py
e10_433/umsgpack/: __init__.py  as_load.py  mp_dump.py  mp_load.py  umsgpack_ext.py
gnuRadio/: cubimrtlsdr.py  gfskrtlsdr.grc
i2c_Scanner/: CmakeLists.txt
i2c_Scanner/src/: main.cpp
microPython/: Telem_parse_2.py
optical_comunicate/: LED.py
КД_CМКА/: 1_Ведомость-ВС_v1.docx  BY.ФДБИ 955.00.00.00 ВО.docx  BY.ФДБИ 955.00.00.00 Э1.docx
КД_CМКА/Документы/: Лист утв_КД_печ.docx  Лист утв_ПЗ_печ.docx
КД_CМКА/Перечни/: ФДБИ.955.02.00.00 ПЭ3.doc  ФДБИ.955.02.01.00 ПЭ3.doc  ФДБИ.955.03.00.00 ПЭ3.doc  ФДБИ.955.04.00.00 ПЭ3.doc  ФДБИ.955.05.00.00 ПЭ3.doc  ФДБИ.955.06.00.00 ПЭ3.doc  ФДБИ.955.07.00.00 ПЭ3.doc
КД_CМКА/Схемы/: Thumbs.db
КД_CМКА/Управление/: task_Batt_I_U.py  task_Slot_I_U.py  task_Solar_I_U.py
(+89 files in other folders)
